# coder-agent

./: .gitignore  AGENTS.md  README.md  pom.xml
coder-agent-api/: pom.xml
coder-agent-app/: Dockerfile  pom.xml
coder-agent-case/: pom.xml
coder-agent-client/: index.html  package-lock.json  package.json  vite.config.ts
coder-agent-client/src/: App.tsx  conversationTitle.ts  messageState.test.ts  messageState.ts  workspace.test.ts  workspace.ts
coder-agent-client/src-tauri/: Cargo.toml  tauri.conf.json
coder-agent-client/src-tauri/src/: lib.rs  main.rs
coder-agent-client/src/api/: client.test.ts  client.ts  types.ts
coder-agent-client/src/components/: MarkdownMessage.test.tsx  MarkdownMessage.tsx
coder-agent-client/src/hooks/: useSseRunEvents.ts
coder-agent-client/src/styles/: app.css
coder-agent-domain/: pom.xml
coder-agent-infrastructure/: pom.xml
coder-agent-trigger/: pom.xml
coder-agent-types/: pom.xml
docs/dev-ops/: docker-compose-environment.yml
docs/superpowers/plans/: 2026-05-30-agent-harness-core-implementation.md
docs/superpowers/specs/: 2026-05-30-agent-harness-core-design.md  2026-05-31-safe-code-editing-v2-design.md
openspec/: config.yaml
openspec/changes/add-agent-client-repo-ops/: design.md  proposal.md  tasks.md
openspec/changes/add-model-selection/: design.md  proposal.md  tasks.md
openspec/changes/add-run-revert-and-checkpoint-rollback/: design.md  proposal.md  tasks.md
openspec/changes/add-safe-code-editing/: design.md  proposal.md  tasks.md
openspec/changes/build-agent-harness-core/: design.md  proposal.md  (+1 more)
(+430 files in other folders)
